--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -10,7 +10,7 @@
   visibility: hidden;
   opacity: 0;
   transition: all .2s ease-in;
-  z-index: 1;
+  z-index: $z-index-modal;
 }
 
 .modal {
