--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,6 +10,11 @@ $xl: $extra-large;
 $extra-extra-large: 1400px;
 $xxl: $extra-extra-large;
 
+//z-index
+$z-index-carousel: 100;
+$z-index-menu: 200;
+$z-index-modal: 300;
+
 //Colors
 $black-color: #333333;
 $black-light-color: #CCCCCC;
